scrollbar thumb fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   min-height: 100vh;
   width: 100%;
-  @apply dark:bg-dark bg-white dark:text-white ;
+  @apply dark:bg-dark bg-white dark:text-white;
 }
 
 h1,
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply dark:text-white text-black font-semibold ;
+  @apply dark:text-white text-black font-semibold;
 }
 
 h1 {
@@ -39,4 +39,33 @@ ul {
   @apply list-disc;
 }
 
+::-webkit-scrollbar {
+  height: 1rem;
+  width: 0.5rem;
+}
 
+::-webkit-scrollbar:horizontal {
+  height: 0.5rem;
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 9999px;
+  @apply dark:bg-black dark:rounded-none;
+}
+
+::-webkit-scrollbar-thumb {
+  --tw-border-opacity: 1;
+  background-color: hsla(0, 0%, 89%, 0.8);
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 1px;
+  @apply dark:bg-neutral-700;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(227, 227, 227, var(--tw-bg-opacity));
+  @apply dark:bg-neutral-700;
+}
